             Default behavior changed to delete the broken file.
             (except for music to prevent accidental deletion when fixing tags)
 * ReScene: SRR was stored in subfolder instead of output folder
 * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
 * ReScene: -x and -d extracts to folder named after .srr in the output path
 * ReTag: Script to fix the tagging of music files. (retag.py)
 * New script added to detect bad "samples" in SRR files. (srs_bad.py)
 * Scripts relocated and .bat files added for easy PATH inclusion in Windows.

pyReScene 0.5.1 (2013-07-14)
===============

 * "SRRs for vobsubs" is disabled due to a bug.

pyReScene 0.5 (2013-07-14)
=============

 * ReScene: initialization bug fixed (compressed RARs issue)
 * ReScene: choosing correct dictionary size while reconstructing
 * ReScene: able to reconstruct RAR 2.0x archives
 * ReScene: solid archives fix (threading issue)
 * ReScene: fix for archives larger than 4GB
 * ReScene: support for compression failures
            (larger packed size than unpacked size)
 * ReScene: provided -t folder does not need to be empty
 * ReScene: support for padding at the end of the RAR files
            Never.on.Sunday.1960.DVDRip.XviD-AEN and recent DAA, Ltu releases
 * ReScene: don't leave a broken SRR file when a 0-byte RAR file is encountered
 * ReScene: -r parameter to locate renamed files when using  -q, --verify
 * ReSample: FLAC and MP3 support: backing up tags to SRS file
             + AcoustID fingerprint and duration
          	 MP3 tags: ID3v1, ID3v2, Lyrics3v1, Lyrics3v2, APEv1, APEv2
 * ReSample: -m option added to prevent using stored match offsets
 * ReSample: fixed KeyError on sample reconstruction
   The.Butterfly.Effect.3.Revelations.2009.STV.FRENCH.720p.BluRay.x264-ROUGH
             (NullReferenceException error in .NET version)
 * ReSample: fixed KeyError on sample reconstruction
             2001.A.Space.Odyssey.1968.1080p.MULTI.BluRay.x264-1080