@@ -22,6 +22,7 @@ pyReScene 0.6
  * ReScene: SRR was stored in subfolder instead of output folder
  * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
  * ReScene: -x and -d extracts to folder named after .srr in the output path
+ * ReScene: Duplicate SFV lines won't include the RAR meta data twice.
  * ReTag: Script to fix the tagging of music files. (retag.py)
  * New script added to detect bad "samples" in SRR files. (srs_bad.py)
  * Scripts relocated and .bat files added for easy PATH inclusion in Windows.
